--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+html, body {
+  margin: 0px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+	max-width: 300px;
+	min-width: 200px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	flex-direction: column;
+  width: 150px;
 }
-
-.App-link {
-  color: #61dafb;
+.item{
+  padding: 10px;
+  display: flex;
+	flex-direction: column;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table{
+  width: 100%;
+  border: 0px;
+}
+.table tbody tr:hover{
+  background-color: #98c1d9;
+}
+.table tbody tr:nth-child(odd){
+  background-color: #e0fbfc;
+}
+.table th{
+  text-align: left;
 }
